Set Cant Contain Content

--- a/SerializationSystem.uplugin
+++ b/SerializationSystem.uplugin
@@ -7,7 +7,7 @@
 	"Category": "Meta",
 	"CreatedBy": "shenkns",
 	"EngineVersion": "5.1.0",
-	"CanContainContent": true,
+	"CanContainContent": false,
 	"IsBetaVersion": false,
 	"IsExperimentalVersion": false,
 	"Installed": false,
